--- a/configs/config-example.json
+++ b/configs/config-example.json
@@ -6,17 +6,14 @@
   "commonConfig": {
     "dxApiBasePath": "",
     "dxAuthBasePath": "",
+    "@context": "",
     "isUACInstance": false
   },
   "clusterId": "iudx-catalogue-cluster",
   "host": "server",
   "modules": [
     {
-      "id": "iudx.catalogue.server.database.DatabaseVerticle",
-      "optionalModules": [
-        "iudx.catalogue.server.geocoding",
-        "iudx.catalogue.server.nlpsearch"
-      ],
+      "id": "iudx.catalogue.server.database.elastic.ElasticsearchVerticle",
       "verticleInstances": 2,
       "databaseIP": "",
       "ratingIndex": "",
@@ -29,7 +26,7 @@
       "bypassAuth": true
     },
     {
-       "id": "iudx.catalogue.server.authenticator.AuthenticationVerticle",
+      "id": "iudx.catalogue.server.authenticator.AuthenticationVerticle",
       "host": "",
       "consumerHost": "",
       "verticleInstances": 1,
@@ -49,6 +46,10 @@
     },
     {
       "id": "iudx.catalogue.server.apiserver.ApiServerVerticle",
+      "optionalModules": [
+        "iudx.catalogue.server.geocoding",
+        "iudx.catalogue.server.nlpsearch"
+      ],
       "catAdmin": "",
       "verticleInstances": 2,
       "ip": "",
@@ -89,6 +90,7 @@
       "verticleInstances": 1,
       "ratingExchangeName": "",
       "rsAuditingTableName": "",
+      "ratingIndex": "",
       "minReadNumber": 100
     },
     {
@@ -107,10 +109,28 @@
       "automaticRecoveryEnabled": ""
     },
     {
+      "id": "iudx.catalogue.server.databroker.rabbitmq.RabbitMQVerticle",
+      "verticleInstances": 1,
+      "dataBrokerIP": "",
+      "dataBrokerPort": 1234,
+      "dataBrokerVhost": "",
+      "dataBrokerUserName": "",
+      "dataBrokerPassword": "",
+      "connectionTimeout": 6000,
+      "requestedHeartbeat": 60,
+      "handshakeTimeout": 6000,
+      "requestedChannelMax": 5,
+      "networkRecoveryInterval": 500,
+      "automaticRecoveryEnabled": ""
+    },
+    {
       "id": "iudx.catalogue.server.mlayer.MlayerVerticle",
       "verticleInstances": 1,
       "databaseTable": "",
       "catSummaryTable" : "",
+      "mlayerInstanceIndex": "",
+      "mlayerDomainIndex": "",
+      "docIndex": "",
       "excluded_ids": []
     },
     {
